tests/compile/fail/composite_nullary.rs
#[hegel::composite]
fn composite_integer_generator() -> i32 {
    0
}

fn main() {}
